Switched to sqlite, improved cert security and added cluster cert auth
